--- a/MVP/content/css/style.css
+++ b/MVP/content/css/style.css
@@ -68,7 +68,7 @@ hr												{ margin: 0px 0px 30px 0px;     width: 75%; }
 .mb10											{margin-bottom:10px;}
 .pb10                                           {padding-bottom:10px !important;}
 .mh966									        {min-height:900px;}
-.mh879									        {min-height:879px;}
+.mh879									        {min-height:830px;}
 .mb2									        {margin-bottom:2px;}
 .mt3									        {margin-top:3px;}
 .mt30                                           { margin-top:30px; }
